[gd_scene load_steps=16 format=3 uid="uid://kty2tew4afmr"]

[ext_resource type="Script" path="res://scripts/props/moving_zap.gd" id="1_ymryp"]
[ext_resource type="Material" uid="uid://g8w0hnohmkva" path="res://materials/eletricity/moving_zap.tres" id="2_4cw08"]
[ext_resource type="Material" uid="uid://qf0e57umi4ga" path="res://materials/eletricity/aasdas.tres" id="3_1h5m7"]
[ext_resource type="Shader" path="res://materials/eletricity/eletricity.gdshader" id="4_emmwn"]
[ext_resource type="Shader" path="res://materials/eletricity/balblal.gdshader" id="5_8tf82"]
[ext_resource type="Script" path="res://scripts/props/LightHit.gd" id="5_g18xq"]
[ext_resource type="Shader" path="res://materials/eletricity/beam.gdshader" id="6_4jr6b"]
[ext_resource type="Material" uid="uid://cpoq4pui4ywml" path="res://materials/eletricity/zap.tres" id="7_n7g24"]
[ext_resource type="Material" uid="uid://cgryq8t0j868p" path="res://materials/eletricity/123213.tres" id="8_jmsrh"]

[sub_resource type="QuadMesh" id="QuadMesh_8a3ki"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fq0a8"]
render_priority = 0
shader = ExtResource("4_emmwn")

[sub_resource type="SphereMesh" id="SphereMesh_xvid3"]
material = SubResource("ShaderMaterial_fq0a8")
radius = 0.6
height = 1.2

[sub_resource type="SphereShape3D" id="SphereShape3D_tbdia"]
radius = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r28cb"]
render_priority = 0
shader = ExtResource("5_8tf82")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nrsuc"]
render_priority = 0
shader = ExtResource("6_4jr6b")

[node name="Zap" type="Node3D"]
script = ExtResource("1_ymryp")

[node name="FluidSparkles" type="GPUParticles3D" parent="."]
material_override = ExtResource("2_4cw08")
cast_shadow = 0
amount = 16
lifetime = 0.01
explosiveness = 1.0
randomness = 1.0
process_material = ExtResource("3_1h5m7")
draw_pass_1 = SubResource("QuadMesh_8a3ki")

[node name="Fluid" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00162077, 0, -0.0206022)
mesh = SubResource("SphereMesh_xvid3")
skeleton = NodePath("../../RigidBody3D")

[node name="LightHit" type="Area3D" parent="." groups=["Zap"]]
script = ExtResource("5_g18xq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LightHit"]
shape = SubResource("SphereShape3D_tbdia")

[node name="Light" type="OmniLight3D" parent="."]
light_color = Color(0.701961, 0.803922, 1, 1)
light_energy = 2.0
light_volumetric_fog_energy = 10.0
shadow_enabled = true
shadow_bias = 0.0
shadow_blur = 0.0
omni_range = 8.0

[node name="EffectsParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -6)
material_override = ExtResource("7_n7g24")
cast_shadow = 0
emitting = false
amount = 200
lifetime = 0.1
one_shot = true
preprocess = 0.01
interpolate = false
process_material = ExtResource("8_jmsrh")
draw_pass_1 = SubResource("QuadMesh_8a3ki")

[node name="Effects" type="Node3D" parent="."]
visible = false

[node name="CSGSphere3D" type="CSGSphere3D" parent="Effects"]
transform = Transform3D(-2.87184e-08, 0, 0.657, 0, 0.651, 0, -0.657, 0, -2.87184e-08, 0, 0, -6.351)
transparency = 1.0
cast_shadow = 0
radius = 0.8
material = SubResource("ShaderMaterial_r28cb")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Effects"]
transform = Transform3D(1.25532e-15, 2.84561e-08, 0.657, 0.657, -2.84561e-08, 2.08935e-21, 2.87184e-08, 0.651, -2.87184e-08, 6.25278e-13, 0, -2.9756)
radius = 0.2
height = 10.0
material = SubResource("ShaderMaterial_nrsuc")

[connection signal="enemy" from="LightHit" to="." method="_on_light_hit_enemy"]
